compiler/tests/compiler/must_fail/t_15.mil.exp.err
tests/compiler/must_fail/t_15.mil:1:8: 1:9 error: variable x not used, rename to _x to ignore
fn foo(x : stack u64) {
       ^^
